# m4ri

./: .gitignore  configure.ac
bench/: Makefile.am  bench_elimination.c  bench_elimination_sparse.c  bench_invert.c  bench_m4rm.c  bench_multiplication.c  bench_mzd.c  bench_ple.c  bench_rank.c  bench_trsm.c  benchmarking.c
bench/cpucycles-20060326/: test.c
bench/libcpucycles-20260105/autogen/: html  html-style  man  readme-version
bench/libcpucycles-20260105/command/: cpucycles-info.c  cpucycles-open.sh
bench/libcpucycles-20260105/doc/: api.md  counters.md  cpucycles-open.md  download.md  install.md  readme.md  security.md  selection.md
bench/libcpucycles-20260105/doc/html/: api.html  counters.html  download.html  index.html  install.html  license.html  security.html  selection.html
bench/libcpucycles-20260105/doc/man/: cpucycles-open.1  cpucycles.3
bench/libcpucycles-20260105/scripts-build/: install
m4ri/: io.c  misc.c  misc.h  mmc.c  mzd.c  mzp.c  ple_russian.c  triangular.c
tests/: test_djb.c  test_elimination.c  test_invert.c  test_kernel.c  test_multiplication.c  test_ple.c  test_pluq.c  test_random.c  test_smallops.c  test_solve.c  test_trsm.c
